force-app/main/default/objects/NCMT_Escalation__c/NCMT_Escalation__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>Escalations</description>
    <label>Escalation</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>