force-app/main/default/objects/NCMT_Escalation__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration - Number of months</description>
    <inlineHelpText>Duration - Number of months</inlineHelpText>
    <label>Duration (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>