force-app/main/default/objects/NCMT_Escalation__c/fields/Escalation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Percentage__c</fullName>
    <description>Escalation Percentage</description>
    <inlineHelpText>Escalation Percentage</inlineHelpText>
    <label>Escalation Percentage</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>