force-app/main/default/objects/NCMT_Escalation__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <description>Escalation Type</description>
    <inlineHelpText>Escalation Type</inlineHelpText>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Escalation</fullName>
            </value>
            <value>
                <fullName>Code &amp; Practice Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>