force-app/main/default/objects/NCMT_Escalation__c/fields/Exclude_Market_Escalation_f__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Market_Escalation_f__c</fullName>
    <formula>Project__r.Exclude_Market_Escalation__c</formula>
    <label>Exclude Market Escalation</label>
    <type>Checkbox</type>
</CustomField>