force-app/main/default/objects/NCMT_Escalation__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <description>Fiscal Year</description>
    <inlineHelpText>Fiscal Year</inlineHelpText>
    <label>FY</label>
    <length>4</length>
    <type>Text</type>
</CustomField>