force-app/main/default/objects/NCMT_Escalation__c/fields/Yearly_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Escalation__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Yearly Escalation</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>