force-app/main/default/objects/NCMT_Escalation__c/validationRules/NCMT_Yearly_Esclation.validationRule-meta.xml
<ValidationRule>
    <fullName>NCMT_Yearly_Esclation</fullName>
    <active>true</active>
    <errorConditionFormula>Yearly_Escalation__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Yearly_Escalation__c</errorDisplayField>
    <errorMessage>Yearly Escalation cannot exceed 100</errorMessage>
</ValidationRule>